fix(Wormhole): 修改 maven-shade-plugin 的 mainClass 配置项 将 maven-shade-plugin 的 mainClass 配置项由 com.titizz.wormhole.fetcher.Fetcher 改为 com.titizz.wormhole.fetcher.FetcherApp

--- a/fetcher/pom.xml
+++ b/fetcher/pom.xml
@@ -82,7 +82,7 @@
                     <transformers>
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.titizz.wormhole.fetcher.Fetcher</mainClass>
+                            <mainClass>com.titizz.wormhole.fetcher.FetcherApp</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
